welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: Unit does not take parameters
  baisseBrosse() {
                 ^SnakeBuggle:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:11: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:13: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:18: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:20: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:23: warning: enclosing method fonctiontest has result type Unit: return value discarded
    return false
    ^